# datacommons

./: .gitignore  .pre-commit-config.yaml  README.md  VERSION  pyproject.toml
.github/workflows/: auto_draft_release.yaml  ci.yaml  e2e_integration_test.yaml  gcp_integration_test.yaml
datacommons/datacommons-api/: README.md  pyproject.toml
datacommons/datacommons-api/src/datacommons/api/: ___node.py  api_cli.py  app.py  app_cli.py  config.py  db_service.py  node.py  responses.py
datacommons/datacommons-api/src/datacommons/api/core/: config.py  constants.py  logging.py
datacommons/datacommons-api/src/datacommons/api/endpoints/: dependencies.py  responses.py
datacommons/datacommons-api/src/datacommons/api/endpoints/routers/: node_router.py
datacommons/datacommons-api/src/datacommons/api/services/: graph_service.py
datacommons/datacommons-db/: README.md  pyproject.toml
datacommons/datacommons-db/src/datacommons/db/: models.py  schema.py  service.py  session.py  spanner.py
datacommons/datacommons-db/src/datacommons/db/models/: base.py  edge.py  node.py  observation.py
datacommons/datacommons-db/src/datacommons/db/repositories/: node_repository.py
datacommons/datacommons-schema/: README.md  pyproject.toml
datacommons/datacommons-schema/src/datacommons/schema/: __init__.py  schema_cli.py
datacommons/datacommons-schema/src/datacommons/schema/____DELETE_MEmcf/: __DELETE_MEmcf.py
datacommons/datacommons-schema/src/datacommons/schema/converters/: mcf_to_jsonld.py
datacommons/datacommons-schema/src/datacommons/schema/models/: jsonld.py  mcf.py
datacommons/datacommons-schema/src/datacommons/schema/parsers/: mcf_parser.py  mcf_parser_test.py
datacommons/datacommons-tools/: pyproject.toml
datacommons/datacommons-tools/src/datacommons/tools/: base.jsonld  primitives.py  tools_cli.py  validator.py
datacommons/datacommons-tools/src/datacommons/tools/jsonld/: jsonld.py  jsonld_utils.py
datacommons/datacommons-tools/src/datacommons/tools/mcf/: mcf.py  mcf_test.py
deploy/: README.md  bump_version.yaml  deploy.sh  nginx.conf  release.yaml  service.yaml.template  services.yaml.template  staging.yaml
deploy/envs/dev/: env  mixer_flags.yaml
deploy/scripts/: deploy.sh
deploy/templates/: nginx.conf  service.yaml.template  service.yaml.template2
docs/: deploy_artifacts.md  release.md
examples/: people.jsonld  person-schema.jsonld
examples/csv/: config.json
experimental/terraform/modules/platform_service/: main.tf  outputs.tf  user_facing_output.tf  user_facing_variable.tf  variables.tf
infra/dcp/: .terraform.tfvars.swp  README.md  main.tf  outputs.tf  setup.sh  terraform.tfvars.example  terraform.tfvars.template  update_image_tag.sh  variables.tf
infra/dcp/backup_gabe/: backend.tf
infra/dcp/examples/remote-module/: main.tf  terraform.tfvars.example
infra/dcp/modules/auth/: main.tf  outputs.tf  variables.tf
infra/dcp/modules/cdc/: locals.tf  main.tf  outputs.tf  service_account.tf  variables.tf
infra/dcp/modules/cdc_data_ingestion_job/: main.tf  outputs.tf  variables.tf
infra/dcp/modules/cdc_iam/: main.tf  outputs.tf  variables.tf
infra/dcp/modules/cdc_mysql/: main.tf  outputs.tf  variables.tf
infra/dcp/modules/cdc_network/: main.tf  outputs.tf  variables.tf
infra/dcp/modules/cdc_redis/: main.tf  outputs.tf  variables.tf
infra/dcp/modules/cdc_services/: main.tf  variables.tf
infra/dcp/modules/cdc_storage/: main.tf  outputs.tf  variables.tf
infra/dcp/modules/datacommons_service/: main.tf  outputs.tf  variables.tf
infra/dcp/modules/datacommons_services/: main.tf  outputs.tf  variables.tf
infra/dcp/modules/dcp/: cloudrun.tf  dataflow.tf  iam.tf  ingestion_helper.tf  locals.tf  outputs.tf  spanner.tf  variables.tf
infra/dcp/modules/dcp_dataflow_ingestion/: main.tf  outputs.tf
infra/dcp/modules/dcp_ingestion_dataflow/: main.tf  outputs.tf
infra/dcp/modules/dcp_ingestion_helper/: main.tf  outputs.tf  variables.tf
infra/dcp/modules/dcp_ingestion_workflow/: main.tf  outputs.tf  variables.tf
infra/dcp/modules/dcp_service/: main.tf  outputs.tf  variables.tf
infra/dcp/modules/dcp_storage/: main.tf  outputs.tf  variables.tf
infra/dcp/modules/ingestion/dataflow/: main.tf  (+2 more)
infra/dcp/modules/ingestion_dataflow/: main.tf  variables.tf
infra/dcp/modules/ingestion_prep_job/: main.tf
infra/dcp/modules/ingestion_workflow/: main.tf  outputs.tf  variables.tf
infra/dcp/modules/networking/: variables.tf
infra/dcp/modules/redis/: main.tf  outputs.tf  variables.tf
infra/dcp/modules/spanner/: bq_reservation.tf  main.tf  outputs.tf  variables.tf
infra/dcp/modules/stack/: main.tf  outputs.tf  variables.tf
infra/dcp/modules/storage/: main.tf  outputs.tf  variables.tf
infra/dcp/tests/: run_integration_test.py
karas-tests/oecd/average_wage/: schema.mcf
karas-tests/oecd/gender_wage_gap/: schema.mcf
samples/: person-schema.jsonld
samples/OECD_wage_data/: average_annual_wage.mcf  config.json  gender_wage_gap.mcf  schema.mcf  shared.mcf  wagegap.mcf
samples/cms_alaska_hospital_data/: config.json  schema.mcf
scripts/: bootstrap_schema.py
tests/datacommons-integration-tests/: README.md  clean_orphaned_sandboxes.py  conftest.py  custom_feature_flags.yaml  docker-compose.override.yml.example  docker-compose.test.yml  gcp_test_runner.py  local_env.yaml  local_nl_server.Dockerfile  local_nl_server.py  mock_nl_server.py  patch_credentials.py  pyproject.toml  run_gcp_integration_test.py  run_local_integration_test.py  schema.sql  setup_emulators.sh  spanner_client.py  storage.pb
tests/datacommons-integration-tests/gcs_seed/test-bucket/output/datacommons/nl/embeddings/: custom_catalog.yaml
tests/datacommons-integration-tests/golden/: nl_query_frogs_usa.json  nl_query_usa.json  spanner_nodes.json  spanner_observations.json
tests/datacommons-integration-tests/suites/: conftest.py  test_oecd_wages.py  test_toy_frog.py
tests/datacommons-integration-tests/test_data/: wages_spanner_rows.json
tests/datacommons-integration-tests/test_data/frog_data/: config.json  observations.csv  provenance.mcf
xiao2/: variables.tf
(+14 files in other folders)
