[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datacommons"
dynamic = ["version"]
description = 'Data Commons is an open source semantic graph database for modeling, querying, and analyzing interconnected data.'
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = []
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "datacommons-api @ {root:uri}/datacommons/datacommons-api",
  "pre-commit",
  "pytest-cov>=4.1.0"
]

[project.urls]
Documentation = "https://github.com/datacommonsorg/datacommons#readme"
Issues = "https://github.com/datacommonsorg/datacommons/issues"
Source = "https://github.com/datacommonsorg/datacommons"

[tool.hatch.build.targets.wheel]
packages = ["packages/datacommons-root"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "packages/datacommons-root/src/datacommons/__init__.py"


# Install dependencies in editable mode for local development
[tool.hatch.envs.default]
post-install-commands = [
  "pip install -e ./packages/datacommons-api",
  "pip install -e ./packages/datacommons-db",
  "pip install -e ./packages/datacommons-schema",
  "pre-commit install",
  "pre-commit install --hook-type pre-push"
]

[tool.hatch.envs.hatch-test]
default-args = []

[tool.pytest.ini_options]
addopts = "--cov=datacommons --cov-report=term --cov-report=html"
testpaths = ["tests"]

[tool.coverage.run]
source = ["datacommons"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "pass",
    "@abstractmethod",
]

[tool.ruff.lint.per-file-ignores]
# For any file in a "tests" directory or ending in "_test.py",
# ignore the S101 (assert) and a few other common test-only rules.
"**/tests/*" = ["S101", "PLR2004"]
"*_test.py" = ["S101", "PLR2004"]