[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datacommons-api"
dynamic = ["version"]
description = 'Data Commons API'
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = [
  { name = "Dan Noble", email = "dwnoble@google.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "flask",
  "flask-restx",
  # "flask-jwt-extended",
  "datacommons-db @ {root:uri}/../datacommons-db",
]

[project.urls]
Documentation = "https://github.com/datacommonsorg/datacommons#readme"
Issues = "https://github.com/datacommonsorg/datacommons/issues"
Source = "https://github.com/datacommonsorg/datacommons"

[project.scripts]
# this makes a console script called `your-project`
datacommons-api = "datacommons.api.api_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/datacommons"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "src/datacommons/api/__init__.py"

# Install dependencies in editable mode for local development
[tool.hatch.envs.default]
post-install-commands = [
  "pip install -e ../datacommons-db",
]
