[project]
name = "datacommons-integration-tests"
version = "1.0.0"
description = "Local system integration tests for emulated Data Commons stack"
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pytest>=9.0.3",
  "requests>=2.31.0",
  "google-cloud-spanner>=3.40.0",
  "jinja2>=3.1.3",
]

[build-system]
requires = ["uv", "setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
